fixing DM_BOOLEAN_CTOR